--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -96,7 +96,7 @@
         <div class="header-content">
             <!-- Add your profile picture here -->
             
-            <h1>KOWSALYA.R</h1>
+            <h1>NANDHINI G</h1>
             <p>Junior Web Developer</p>
         </div>
     </header>
@@ -166,14 +166,14 @@
         <div class="section-content">
             <center>
             <h2>Resume</h2>
-            <a href="\portfolio\resume.pdf" target="_blank" class="download-button">Download CV</a>
+            <a href="\portfolio\CV.pdf" target="_blank" class="download-button">Download CV</a>
         </center>
         </div>
         
     </section>
 
     <footer>
-        <p>&copy; 2025 KOWSALYA R</p>
+        <p>&copy; 2025 NANDHINI G</p>
     </footer>
 
     <script>
